Gestion detail pdt, panier, navigation

--- a/orinoco-frontend/views/customize.html
+++ b/orinoco-frontend/views/customize.html
@@ -20,6 +20,10 @@
 
   <body>
     <div id="main">
+      <p>
+        <button id="toListOfProducts">Liste des produits</button>
+        <button id="toOrder">Passer la commande</button>
+      </p>
       <div id="customizeResult"></div>
     </div>
 
