--- a/orinoco-frontend/content/style.css
+++ b/orinoco-frontend/content/style.css
@@ -2,7 +2,6 @@
     font-family: 'belligerent_madnessregular';
     src: url('../fonts/belligerent-webfont.eot');
     src: url('../fonts/belligerent-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/belligerent-webfont.woff2') format('woff2'),
          url('../fonts/belligerent-webfont.woff') format('woff'),
          url('../fonts/belligerent-webfont.ttf') format('truetype'),
          url('../fonts/belligerent-webfont.svg#belligerent_madnessregular') format('svg');
@@ -15,4 +14,9 @@ h1, .navbar-brand-font {
     font-size: 5rem;
     font-family: 'belligerent_madnessregular';
 }
+
+.navbar-brand-font {
+    font-size: 2rem;
+}
+
 
