--- a/orinoco-frontend/views/customize.html
+++ b/orinoco-frontend/views/customize.html
@@ -57,45 +57,89 @@
   </head>
 
   <body>
-
-    <header class="container-fluid jumbotron">
-      <h1><i class="fas fa-shopping-cart"></i> Orinoco</h1>
-      <p>Venez retrouver l'ourson en peluche de votre enfance</p>
-    </header>
-
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-      <a class="navbar-brand" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i> Orinoco</a>
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="../index.html">Liste des produits</a></li>
-<!--        <li><button id="toListOfProducts">Liste des produits</button></li>
--->
-      </ul>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
+      <a class="navbar-brand d-lg-none" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigations-02"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse justify-content-md-center" id="navigations-02">
+        <div class="row w-100">
+          <div class="col-4 pl-lg-0">
+            <ul class="navbar-nav">
+      <!--        <li><button id="toOrder">Panier</button></li> -->
+              <li class="nav-item"><a class="nav-link" href="../index.html">Liste des produits</a></li>
+            </ul>
+          </div>
+          <div class="col-4 navbar-nav text-center pr-0 d-none d-lg-block"><a class="navbar-brand mr-0" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a></div>
+          <div class="col-4 pr-lg-0">
+            <ul class="navbar-nav justify-content-end">
+              <li class="nav-item"><a class="nav-link" href="/views/order.html"><i class="fas fa-shopping-basket"></i> Panier</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>            
     </nav>
 
-    <main class="container-fluid">
-      <article id="customizeResult"></article>
+    <header class="py-5">
+      <div class="container text-center">
+        <h1 class="display-4 my-3">Venez retrouver l'ourson en peluche de votre enfance</h1>
+        <!--<a class="btn btn-link my-2" href="#">Read more »</a>
+        -->
+      </div>
+    </header>
 
-      <!-- the aside content can also be nested within the main content -->
-      <aside>
-        <form id="form_1" novalidate class="jumbotron">
-          <h2><label for="teddyColor">Coloris:</label></h2>
-          <select id="teddyColor" class="selector" ></select>
-          <p id="logTeddyColor"></p>
+    <main>
 
-          <h2><label for="teddyQty">Quantité:</label></h2>
-          <select id="teddyQty" class="selector" ></select>
-          <p id="logTeddyQty"></p>
-
-          <button id="toAddInBasket">Ajouter au panier</button>
-          <button id="toOrder">Passer la commande</button>
-        </form>
-
-        <ul class="jumbotron">
-          <li><a href="#">Oh I do like to be beside the seaside</a></li>
-          <li><a href="#">Oh well...</a></li>
-        </ul>
-        
-      </aside>
+      <section class="py-5">
+        <div class="container">
+          <div class="row flex-column flex-lg-row">
+            <div id="teddyPicture" class="col-lg-6 mb-5 mb-lg-0"></div>
+            <div class="col-lg-6">
+              <ul class="list-inline d-flex">
+                <li class="mr-1"><a href="#"><img src="../img/etoile4.png" width="32" alt=""><span class="sr-only">One star</span></a></li>
+                <li class="mr-1"><a href="#"><img src="../img/etoile4.png" width="32" alt=""><span class="sr-only">Two star</span></a></li>
+                <li class="mr-1"><a href="#"><img src="../img/etoile4.png" width="32" alt=""><span class="sr-only">Three star</span></a></li>
+                <li class="mr-1"><a href="#"><img src="../img/etoile4.png" width="32" alt=""><span class="sr-only">Four star</span></a></li>
+                <li class="mr-1"><a href="#"><img src="../img/etoile4.png" width="32" alt=""><span class="sr-only">Five star</span></a></li>
+              </ul>
+              <h2 id="teddyTitle" class="mt-3 mb-4"></h2>
+              <p id="teddyStory" class="mt-3 mb-4"></p>
+              <h5 id="teddyPrice" class="mt-3 mb-4"></h5>
+            
+              <div class="row flex-column flex-lg-row d-flex align-items-center my-4">
+                <ul class="col-lg-5 list-inline d-flex">
+                  <li class="mr-5">
+                      <h7><label for="teddyColor">Coloris:</label></h7>
+                      <select id="teddyColor" class="selector" ></select>
+                      <p id="logTeddyColor"></p>
+                  </li>
+                  <li class="mr-5">
+                      <h7><label for="teddyQty">Quantité:</label></h7>
+                      <select id="teddyQty" class="selector" ></select>
+                      <p id="logTeddyQty"></p>
+                  </li>
+                </ul>
+                <ul class="col-lg-9 list-inline d-flex">
+                  <li class="mr-2">
+                    <button id="toAddInBasket" class="btn btn-primary">Ajouter au panier</button>
+                  </li>
+                  <li class="mr-2">
+                    <button id="toOrder" class="btn btn-primary">Passer la commande</button>
+                  </li>
+                </ul>
+              </div>  
+            <hr class="my-4">
+            <div class="d-flex align-items-center justify-content-between flex-column flex-sm-row">
+              <a class="align-items-center" href="#">Marquer comme Favoris</a>
+              <ul class="list-inline d-flex mb-0 mt-2 mt-sm-0">
+                <li class="px-2">Partagez</li>
+                <li class="px-2"><a href="#"><span class="sr-only">Facebook</span><i class="fab fa-twitter"></i></a></li>
+                <li class="px-2"><a href="#"><span class="sr-only">Twitter</span><i class="fab fa-facebook"></i></a></li>
+                <li class="px-2"><a href="#"><span class="sr-only">Instagram</span><i class="fab fa-instagram"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
