--- a/orinoco-frontend/views/order.html
+++ b/orinoco-frontend/views/order.html
@@ -57,22 +57,39 @@
   </head>
 
   <body>
-    <header class="container-fluid jumbotron">
-      <h1><i class="fas fa-shopping-cart"></i> Orinoco</h1>
-      <p>Venez retrouver l'ourson en peluche de votre enfance</p>
-    </header>
-
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-      <a class="navbar-brand" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i> Orinoco</a>
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="../index.html">Liste des produits</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
+      <a class="navbar-brand d-lg-none" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigations-02"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse justify-content-md-center" id="navigations-02">
+        <div class="row w-100">
+          <div class="col-4 pl-lg-0">
+            <ul class="navbar-nav">
+      <!--        <li><button id="toOrder">Panier</button></li> -->
+              <li class="nav-item"><a class="nav-link" href="../index.html">Liste des produits</a></li>
+            </ul>
+          </div>
+          <div class="col-4 navbar-nav text-center pr-0 d-none d-lg-block"><a class="navbar-brand mr-0" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a></div>
+          <div class="col-4 pr-lg-0">
+            <ul class="navbar-nav justify-content-end">
+              <li class="nav-item"><a class="nav-link" href="/views/order.html"><i class="fas fa-shopping-basket"></i> Panier</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>            
     </nav>
 
+    <header class="py-5">
+      <div class="container text-center">
+        <h1 class="display-4 my-3">Venez retrouver l'ourson en peluche de votre enfance</h1>
+        <!--<a class="btn btn-link my-2" href="#">Read more »</a>
+        -->
+      </div>
+    </header>
+
     <main class="container-fluid">
-      <article>
-        <h2 class="jumbotron">Récapitulatif de commande (étape 1/3)</h2>
+      <article class="container text-center">
+        <h2 class="mt-3 mb-4">Récapitulatif de commande (étape 1/3)</h2>
         
         <table id="orderResult" width='100%' border=true>
           <tr>
@@ -88,39 +105,39 @@
         </table>
       </article>
 
-      <aside id="totalAmountArea"></aside>
+      <aside class="container text-right py-4" id="totalAmountArea"></aside>
 
-      <article>
-        <h2 class="jumbotron">Coordonnées pour la livraison (étape 2/3)</h2>
+      <article class="container text-center py-4">
+        <h2 class="mt-3 mb-4">Coordonnées pour la livraison (étape 2/3)</h2>
         
         <form action="/" method="get">
-          <table width=100% border=true>
+          <table width=75%>
             <tr><td>
-                <label for="email">Adresse électronique:</label>
-                <input type="email" placeholder="pseudo@domaine.com" id="email" name="email"/>
+                <label class="sr-only" for="email">Courriel:</label>
+                <input class="form-control my-3 bg-light" type="email" placeholder="Courriel" id="email" name="email"/>
               <p id="logEmail"></p>
             </td><td></td></tr>
             <tr><td>
-                <label for="firstName">Prénom:</label>
-                <input type="text" placeholder="Prénom" id="firstName" name="firstName" class="fullName"/>
+                <label class="sr-only" for="firstName">Prénom:</label>
+                <input class="form-control my-3 bg-light fullName" type="text" placeholder="Prénom" id="firstName" name="firstName"/>
               <p id="logFirstName"></p>
             </td><td>
-                <label for="lastName">Nom de famille:</label>
-                <input type="text" placeholder="Nom de famille" id="lastName" name="lastName" class="fullName"/>
+                <label class="sr-only" for="lastName">Nom de famille:</label>
+                <input class="form-control my-3 bg-light fullName" type="text" placeholder="Nom de famille" id="lastName" name="lastName"/>
               <p id="logLastName"></p>
             </td></tr>
             <tr><td>
-                <label for="address">Numéro et nom de voie:</label>
-                <input type="text" placeholder="14 rue Vivaldi" id="address" name="address" />
+                <label class="sr-only" for="address">Numéro et nom de voie:</label>
+                <input class="form-control my-3 bg-light" type="text" placeholder="Numéro et nom de voie" id="address" name="address" />
               <p id="logAddress"></p>
             </td><td>
-                <label for="city">Ville:</label>
-                <input type="text" placeholder="Lille" id="city" />
+                <label class="sr-only" for="city">Ville:</label>
+                <input class="form-control my-3 bg-light" type="text" placeholder="Ville" id="city" />
               <p id="logCity"></p>
             </td></tr>
           </table>
 
-          <p><button type="submit" disabled id="toValidateOrder">Commander</button></p>
+          <p><button class="btn btn-primary btn-block py-2 my-3" type="submit" disabled id="toValidateOrder">Commander</button></p>
         </form>
       </article>
     </main>
