--- a/orinoco-frontend/views/thanks.html
+++ b/orinoco-frontend/views/thanks.html
@@ -41,22 +41,38 @@
   </head>
 
   <body>
-
-    <header class="container-fluid jumbotron">
-      <h1><i class="fas fa-shopping-cart"></i> Orinoco</h1>
-      <p>Venez retrouver l'ourson en peluche de votre enfance</p>
-    </header>
-
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-      <a class="navbar-brand" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i> Orinoco</a>
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="../index.html">Liste des produits</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
+      <a class="navbar-brand d-lg-none" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigations-02"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse justify-content-md-center" id="navigations-02">
+        <div class="row w-100">
+          <div class="col-4 pl-lg-0">
+            <ul class="navbar-nav">
+      <!--        <li><button id="toOrder">Panier</button></li> -->
+              <li class="nav-item"><a class="nav-link" href="../index.html">Liste des produits</a></li>
+            </ul>
+          </div>
+          <div class="col-4 navbar-nav text-center pr-0 d-none d-lg-block"><a class="navbar-brand mr-0" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a></div>
+          <div class="col-4 pr-lg-0">
+            <ul class="navbar-nav justify-content-end">
+              <li class="nav-item"><a class="nav-link" href="/views/order.html"><i class="fas fa-shopping-basket"></i> Panier</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>            
     </nav>
+
+    <header class="py-5">
+      <div class="container text-center">
+        <h1 class="display-4 my-3">Venez retrouver l'ourson en peluche de votre enfance</h1>
+        <!--<a class="btn btn-link my-2" href="#">Read more »</a>
+        -->
+      </div>
+    </header>
     
     <main class="container-fluid">
-      <h2>Commande validée. Merci ! (étape 3/3)</h2>
+      <h2 class="mt-3 mb-4">Commande validée. Merci ! (étape 3/3)</h2>
       <article id="thanksResult"></article>
 
       <aside class="jumbotron">
