--- a/views/customize.html
+++ b/views/customize.html
@@ -5,15 +5,15 @@
     <meta name="description" content="Tu peux maintenant personnaliser la couleur de ta Peluches fait à la main.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="canonical" href="https://jeroso94.github.io/orinoco/views/customize.html">
+    <link rel="canonical" href="https://temporal-data-308119.web.app/views/customize.html">
     
     <title>Orinoco - Produit</title>
     <!-- Open Graph data -->
 
     <meta property="og:title" content="Orinoco - Produit"/>
     <meta property="og:type" content="e-commerce"/>
-    <meta property="og:url" content="http://localhost:8080/"/>
-    <meta property="og:image" content="http://localhost:8080/favicon.png"/>
+    <meta property="og:url" content="https://temporal-data-308119.web.app"/>
+    <meta property="og:image" content="https://temporal-data-308119.web.app/favicon.png"/>
     <meta property="og:description" content="Orinico est la plateforme de e-commerce des boutiques à thèmes (Livres, Textiles, Peluches fait à la main, Caméras vintage, Meubles en chêne)."/>
 
     <!-- Twitter Card data -->
@@ -23,7 +23,7 @@
     <meta name="twitter:description" content="Orinico est la plateforme de e-commerce des boutiques à thèmes (Livres, Textiles, Peluches fait à la main, Caméras vintage, Meubles en chêne).">
     <meta name="twitter:creator" content="@author_handle">
     <!-- Twitter Summary card images must be at least 200x200px -->
-    <meta name="twitter:image" content="http://localhost:8080/favicon.png">
+    <meta name="twitter:image" content="https://temporal-data-308119.web.app/favicon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -35,30 +35,30 @@
     <script src="https://kit.fontawesome.com/a7946aabc7.js" crossorigin="anonymous"></script>
 
     <!-- Favicons navigateurs populaires ordinateurs/iOS/Android/IE10+ -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.png" type="image/png">
-    <link rel="icon" sizes="32x32" href="favicon-32.png" type="image/png">
-    <link rel="icon" sizes="64x64" href="favicon-64.png" type="image/png">
-    <link rel="icon" sizes="96x96" href="favicon-96.png" type="image/png">
-    <link rel="icon" sizes="196x196" href="favicon-196.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
-    <meta name="msapplication-TileImage" content="favicon-144.png">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.png" type="image/png">
+    <link rel="icon" sizes="32x32" href="../favicon-32.png" type="image/png">
+    <link rel="icon" sizes="64x64" href="../favicon-64.png" type="image/png">
+    <link rel="icon" sizes="96x96" href="../favicon-96.png" type="image/png">
+    <link rel="icon" sizes="196x196" href="../favicon-196.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../apple-touch-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../favicon-144.png">
     <meta name="msapplication-TileColor" content="#FFFFFF">
 
     <!-- Babel -->
-    <script type="text/javascript" src="/polyfill.bundle.js" defer></script>
+    <script type="text/javascript" src="../dist/polyfill.bundle.js" defer></script>
     <!-- Webpack -->
-    <script type="text/javascript" src="/app.bundle.js" defer></script>
+    <script type="text/javascript" src="../dist/app.bundle.js" defer></script>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
-      <a class="navbar-brand d-lg-none" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a>
+      <a class="navbar-brand d-lg-none" href="../index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigations-02"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse justify-content-md-center" id="navigations-02">
         <div class="row w-100">
@@ -68,10 +68,10 @@
               <li class="nav-item"><a class="nav-link" href="../index.html">Liste des produits</a></li>
             </ul>
           </div>
-          <div class="col-4 navbar-nav text-center pr-0 d-none d-lg-block"><a class="navbar-brand mr-0" href="http://localhost:8080/index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a></div>
+          <div class="col-4 navbar-nav text-center pr-0 d-none d-lg-block"><a class="navbar-brand mr-0" href="../index.html"><i class="fas fa-shopping-cart"></i><span class="navbar-brand-font"> Orinoco</span></a></div>
           <div class="col-4 pr-lg-0">
             <ul class="navbar-nav justify-content-end">
-              <li class="nav-item"><a class="nav-link" href="/views/order.html"><i class="fas fa-shopping-basket"></i> Panier</a></li>
+              <li class="nav-item"><a class="nav-link" href="./order.html"><i class="fas fa-shopping-basket"></i> Panier</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
             </ul>
           </div>
