--- a/views/customize.html
+++ b/views/customize.html
@@ -5,15 +5,15 @@
     <meta name="description" content="Tu peux maintenant personnaliser la couleur de ta Peluches fait à la main.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="canonical" href="https://temporal-data-308119.web.app/views/customize.html">
+    <link rel="canonical" href="https://jeroso94.github.io/orinoco/views/customize.html">
     
     <title>Orinoco - Produit</title>
     <!-- Open Graph data -->
 
     <meta property="og:title" content="Orinoco - Produit"/>
     <meta property="og:type" content="e-commerce"/>
-    <meta property="og:url" content="https://temporal-data-308119.web.app"/>
-    <meta property="og:image" content="https://temporal-data-308119.web.app/favicon.png"/>
+    <meta property="og:url" content="https://jeroso94.github.io/orinoco/"/>
+    <meta property="og:image" content="https://jeroso94.github.io/orinoco/favicon.png"/>
     <meta property="og:description" content="Orinico est la plateforme de e-commerce des boutiques à thèmes (Livres, Textiles, Peluches fait à la main, Caméras vintage, Meubles en chêne)."/>
 
     <!-- Twitter Card data -->
@@ -23,7 +23,7 @@
     <meta name="twitter:description" content="Orinico est la plateforme de e-commerce des boutiques à thèmes (Livres, Textiles, Peluches fait à la main, Caméras vintage, Meubles en chêne).">
     <meta name="twitter:creator" content="@author_handle">
     <!-- Twitter Summary card images must be at least 200x200px -->
-    <meta name="twitter:image" content="https://temporal-data-308119.web.app/favicon.png">
+    <meta name="twitter:image" content="https://jeroso94.github.io/orinoco/favicon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
