--- a/views/thanks.html
+++ b/views/thanks.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Félicitation, la commande est enregistrée !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="canonical" href="https://temporal-data-308119.web.app/views/thanks.html">
+    <link rel="canonical" href="https://jeroso94.github.io/orinoco/views/thanks.html">
     
     <title>Orinoco - Commande enregistrée. Merci !</title>
    
